tests/ui/consts/static-default-lifetime/generic-associated-const.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/generic-associated-const.rs:6:29
   |
LL |     const GAC_LIFETIME<'a>: &str = "";
   |                             ^ expected named lifetime parameter
   |
help: consider using the `'a` lifetime
   |
LL |     const GAC_LIFETIME<'a>: &'a str = "";
   |                              ++

error[E0106]: missing lifetime specifier
  --> $DIR/generic-associated-const.rs:12:29
   |
LL |     const GAC_LIFETIME<'a>: &str = "";
   |                             ^ expected named lifetime parameter
   |
help: consider using the `'a` lifetime
   |
LL |     const GAC_LIFETIME<'a>: &'a str = "";
   |                              ++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0106`.
